# nftables-fullcone

./: .gitignore  INSTALL  Make_global.am  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  nftables_0.0.0~20131217.orig.tar.bz2.delta  nftables_0.0.0~20131217.orig.tar.bz2.id  nftables_0.099+git20140120.orig.tar.gz.delta  nftables_0.099+git20140120.orig.tar.gz.id  nftables_0.099+git20140120.orig.tar.xz.delta  nftables_0.100.orig.tar.bz2.delta  nftables_0.100.orig.tar.bz2.id  nftables_0.2.orig.tar.bz2.delta  nftables_0.2.orig.tar.bz2.id  nftables_0.3.orig.tar.bz2.delta  nftables_0.3.orig.tar.bz2.id  nftables_0.4.orig.tar.bz2.delta  nftables_0.4.orig.tar.bz2.id  nftables_0.6+snapshot20161117.orig.tar.bz2.delta  nftables_0.6+snapshot20161117.orig.tar.bz2.id  nftables_0.7.orig.tar.bz2.delta  nftables_0.7.orig.tar.bz2.id  nftables_0.8.1.orig.tar.bz2.delta  nftables_0.8.1.orig.tar.bz2.id  nftables_0.8.2.orig.tar.bz2.delta  nftables_0.8.2.orig.tar.bz2.id  nftables_0.8.3.orig.tar.bz2.delta  nftables_0.8.3.orig.tar.bz2.id  nftables_0.8.4.orig.tar.bz2.delta  nftables_0.8.4.orig.tar.bz2.id  nftables_0.8.5.orig.tar.bz2.delta  nftables_0.8.5.orig.tar.bz2.id  nftables_0.8.orig.tar.bz2.delta  nftables_0.8.orig.tar.bz2.id  nftables_0.9.0.orig.tar.bz2.delta  (+51 more)
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: README.Debian  basic.nft  changelog  clean  control  copyright  files  gbp.conf  libnftables-dev.install  libnftables1.lintian-overrides  libnftables1.symbols  nftables-service.install  nftables.conf  nftables.examples  nftables.init  nftables.install  nftables.links  nftables.lintian-overrides  nftables.maintscript  nftables.postinst  nftables.postrm  nftables.service  nftables.substvars  not-installed  rules  watch
debian/examples/: workstation.nft
debian/examples/syntax/: README  overview
debian/nft-service/: nftables.conf
debian/patches/: 0000-upstream-cache-echo.patch  0001-interpreter  0001-py-remove-setup-py-integration-with-autotools.patch  0001-py.patch  0001-upstream-py-load-soname.patch  0001-upstream-src-secmark.patch  0002-py-move-package-source-into-src-directory.patch  0002-upstream-tests-shell.patch  0003-py-use-setup.cfg-to-configure-setuptools.patch  0004-py-add-pyproject.toml-to-support-PEP-517-compatible-.patch  0005-doc-move-man-pages-to-MAINTAINERCLEANFILES.patch  address-prefix-set-fix.patch  big-endian-1.patch  big-endian-2.patch  big-endian-3.patch  build_docs.patch  cache-rename-chain_htable-to-cache_chain_ht.patch  distclean.patch  evaluate-init-cmd-pointer-for-new-on-stack-context.patch  fix-typos.patch  hardening.patch  interpreter.patch  lp-1965464-build-explicitly-pass-version-script-to-linker.patch  lp-1965464-libnftables.map-export-new-nft_ctx_-get-set-_optimiz.patch  payload-check-icmp-dependency-before-removing-previo.patch  rename_libnftables_h.patch  reproducible.patch  rule-add-helper-function-to-expand-chain-rules-into-.patch  rule-expand-standalone-chain-that-contains-rules.patch  rule_fix_for_potential_off-by-one_in_cmd_add_loc.patch  series  src-expand-table-command-before-evaluation.patch  src-split-chain-list-in-table.patch  verbose_build.patch
debian/source/: options
debian/tests/: control  internaltest-monitor.sh  internaltest-py  internaltest-py.sh  internaltest-shell  internaltest-shell.sh  systemd-service-test.sh
debian/upstream/: signing-key.asc
doc/: Makefile.am  Makefile.in  data-types.txt  libnftables-json.5  libnftables-json.adoc  libnftables.3  libnftables.adoc  nft.8  nft.txt  nft.xml  payload-expression.txt  primary-expression.txt  stateful-objects.txt  statements.txt
examples/: Makefile.am  Makefile.in
files/: Makefile  Makefile.am  Makefile.in
files/examples/: Makefile  Makefile.in  arp-filter.nft  bridge-filter.nft  families_and_hooks.nft  ipv4-filter.nft  ipv4-mangle.nft  ipv4-nat.nft  ipv4-raw.nft  ipv6-filter.nft  ipv6-mangle.nft  ipv6-nat.nft  ipv6-raw.nft  netdev-ingress.nft
files/nftables/: Makefile  Makefile.am  Makefile.in  all-in-one.nft  arp-filter  arp-filter.nft  bridge-filter.nft  inet-filter.nft  inet-nat.nft  ipv4-filter.nft  ipv4-mangle.nft  ipv4-nat  ipv4-nat.nft  ipv4-raw.nft  ipv6-filter.nft  ipv6-mangle.nft  ipv6-nat  ipv6-nat.nft  ipv6-raw.nft  netdev-ingress.nft
files/osf/: Makefile  Makefile.in
include/: Makefile.am  Makefile.in  cache.h  cli.h  cmd.h  ct.h  datatype.h  dccpopt.h  erec.h  expression.h  exthdr.h  gmputil.h  headers.h  intervals.h  ipopt.h  json.h  list.h  meta.h  mnl.h  netlink.h  nft.h  nftables.h  osf.h  parser.h  payload.h  proto.h  rule.h  socket.h  statement.h  tcpopt.h  utils.h  xt.h
include/linux/: Makefile.in  netfilter.h
include/linux/netfilter/: Makefile.am  Makefile.in  nf_tables.h
include/linux/netfilter_arp/: Makefile.in
include/linux/netfilter_bridge/: Makefile.in
include/linux/netfilter_ipv4/: Makefile.in
include/linux/netfilter_ipv6/: Makefile.in
include/nftables/: Makefile.am  Makefile.in  libnftables.h  nftables.h
py/: Makefile.am  Makefile.in  nftables.py  setup.py
src/: Makefile.am  Makefile.in  cache.c  cli.c  cmd.c  ct.c  datatype.c  dccpopt.c  erec.c  evaluate.c  expression.c  exthdr.c  fib.c  gmputil.c  hash.c  iface.c  intervals.c  ipopt.c  json.c  libnftables.c  libnftables.map  main.c  mergesort.c  meta.c  misspell.c  mnl.c  monitor.c  netlink.c  netlink_delinearize.c  netlink_linearize.c  nfnl_osf.c  numgen.c  optimize.c  osf.c  owner.c  parser_bison.c  parser_bison.h  parser_bison.y  parser_json.c  payload.c  (+13 more)
tests/json_echo/: run-test.py
tests/monitor/: run-tests.sh
tests/monitor/testcases/: map-expr.t  object.t  set-interval.t  simple.t
tests/py/: log  nft-test.py  x  y
tests/py/any/: ct.t  ct.t.json  ct.t.json.output  ct.t.payload  ct.t.payload.got  dup.t  dup.t.json  dup.t.payload.got  fwd.t  fwd.t.json  fwd.t.json.output  (+30 more)
tests/shell/: README  log  log-0  log-1  log-10  log-11  log-12  log-13  log-14  log-15  log-16  log-17  log-18  log-19  log-2  log-3  log-4  log-5  log-6  log-7  log-8  log-9  overlap-interval.txt  run-tests.sh  test-list.txt  x  y
(+572 files in other folders)
